scss: Fix bug with nav dropdown appearing behind content

--- a/scss/modules/nav.scss
+++ b/scss/modules/nav.scss
@@ -33,6 +33,7 @@
         border: 1px solid #eee;
         display: none;
         position: absolute;
+        z-index: 999;
 
         ul li {
             display: block;
